# ConcursoDatosAbiertoColombiaID8

./: LICENSE  Makefile  README.md  app.py  index.html  pyproject.toml  requirements-all.txt  requirements.txt  setup.py  snies_permanencia.db  styles.css
Documents/: Certificación Contenido Digital.docx  HOJA MEMBRETE.docx  Tutorial 1.html  certificacion_alianza_unilasallista.html  registro_desarrollo_web.md  wireframe_plano_pantalla.html
Software/: db.sqlite3
Software/core_app/: admin.py  models.py  views.py
Software/core_app/migrations/: 0001_initial.py
Software/media/csv_uploads/: Administrativos_2018-2023.csv  predicciones_1.csv  predicciones_3.csv  predicciones_4.csv  predicciones_7.csv
Software/media/notebooks/: analisis_8.ipynb
Software/scratch/: find_links.py
Software/software_project/: asgi.py  settings.py  urls.py  wsgi.py
Software/static/css/: custom_admin.css
Software/templates/core_app/: base.html  curricular.html  dashboard.html  eda.html  inicio.html  modelos.html  prediccion.html  prescriptivo.html  xai.html
Tutorial prescriptivo/Proyecto_IA/: Análisis y Predicción de la Demanda de Educación Superior en Colombia.pptx  Demanda programas de educación Superior.docx
api/: main.py
config/: config.yaml  logging.yaml
data/processed/: processed_curriculum.csv  processed_students.csv
data/raw/: Ejecucion por Gerencia Regional, INFOTEP, 2018 - 2025.csv  colombia_datos_abiertos.csv  dane_socioeconomico.csv  ole_graduados.csv  snies_matriculados.csv
landing_page/: index.html
models/: gradientboosting_model.pkl  lightgbm_model.pkl  preprocessor.pkl  randomforest_model.pkl  xgboost_model.pkl
notebooks/: 01_Descarga_SNIES.ipynb  02_Descarga_DANE.ipynb  03_Descarga_OLE.ipynb  04_Datos_Abiertos.ipynb  05_ETL.ipynb  06_EDA.ipynb  07_Feature_Engineering.ipynb  08_Seleccion_Variables.ipynb  09_Modelos_Supervisados.ipynb  10_Modelos_NoSupervisados.ipynb  11_PyCaret_AutoML.ipynb  12_FLAML.ipynb  13_XAI_SHAP.ipynb  14_XAI_LIME.ipynb  15_Evaluacion.ipynb  16_Analitica_Prescriptiva.ipynb  17_Streamlit.ipynb  18_Despliegue.ipynb  README.md
src/: __init__.py
src/application/: __init__.py  etl.py  feature_engineering.py  training.py  xai.py
src/domain/: __init__.py  entities.py  interfaces.py
src/infrastructure/: __init__.py
src/infrastructure/database/: __init__.py  connection.py  init_db.py  models.py
tests/: test_pipeline.py
(+1 files in other folders)
