[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "framework-ml-snies"
version = "1.0.0"
description = "Framework Inteligente de ML Multimodelo para Analítica Predictiva y Prescriptiva — Permanencia Estudiantil SNIES Colombia"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Feibert Alirio Guzmán Pérez", email = "investigacion@unilasallista.edu.co" },
    { name = "Jonathan Berthel Castro" },
    { name = "Doris María Vásquez González" },
]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pandas>=2.2.2",
    "numpy>=1.26.4",
    "scikit-learn>=1.5.0",
    "xgboost>=2.0.3",
    "lightgbm>=4.3.0",
    "plotly>=5.22.0",
    "streamlit>=1.35.0",
    "sqlalchemy>=2.0.30",
    "requests>=2.31.0",
    "python-dotenv>=1.0.1",
    "reportlab>=4.2.0",
    "django>=5.0.0",
    "joblib>=1.4.0",
    "openpyxl>=3.1.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 88
target-version = ['py312']
exclude = '/(\.git|\.hg|\.mypy_cache|\.tox|\.venv|_build|buck-out|build|dist)/'
